--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <br>1. うどん
         <img class="imgf1" src="01.jpeg"> 
         <br>2. カレー
+        <br>○私は麺類の中でも特に「うどん」が大好きです。カレーうどんなんか最高ですね。
         <img class="imagf2" src="">
         <br>3. 
         
